--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
+  <html Lang="ru">
   <body>
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewprort" content="width=device-width, initial-scale=1">
+        <title>Мой первый сайт</title>
+        <link rel="stylesheet" href="./fonts.css">
+        <link rel="stylesheet" href='https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">'
+        <link rel="stylesheet" href='./style.css'>
+        <h1 class='title'>
+    </head>
         <header>
               <div>app.creation</div>
               <nav>
@@ -7,17 +17,19 @@
                     <a>about</a>
                     <a>blog</a>
                     <a>contact us<a/>
+
               </nav>
         </header>
         <section>
               <main>
                     <h1>Building an App Without Design Expertise?</h1>
-                    <p>I help tech startups design better digital products without hiring a full-time designer</p>
+                    <p>I help tech startups design better digital products without hiring a full-ti me designer</p>
                     <button>Schedule free consultation</button>
               </main>
               <div>
-                    <img>
+                    <img>>
               </div>
         </section>
   </body>
-.
+
+<html>
