--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<html Lang="ru">
+  <head>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <title>Мой первый сайт</title>
+  </head>
   <body>
         <header>
               <div>app.creation</div>
@@ -7,17 +14,20 @@
                     <a>about</a>
                     <a>blog</a>
                     <a>contact us<a/>
+
               </nav>
         </header>
         <section>
               <main>
-                    <h1>Building an App Without Design Expertise?</h1>
-                    <p>I help tech startups design better digital products without hiring a full-time designer</p>
+                    <h1 class="title">Building an App Without Design Expertise?</h1>
+                    <p>I help tech startups design better digital products without hiring a full-ti me designer</p>
                     <button>Schedule free consultation</button>
               </main>
               <div>
-                    <img>
+                    <img>>
               </div>
         </section>
   </body>
-.
+
+<html>
+
