--- a/index.html
+++ b/index.html
@@ -1,33 +1,33 @@
-<html Lang="ru">
+       <html Lang="ru">
   <head>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Мой первый сайт</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
-        <header>
-              <div>app.creation</div>
-              <nav>
-                    <a>start</a>
-                    <a>services</a>
-                    <a>about</a>
-                    <a>blog</a>
-                    <a>contact us<a/>
 
+
+  <body>
+        <header class="header">
+              <div class="logo">app.creation</div>
+              <nav class="menu">
+                    <a class="menu__item" href="#">start</a>
+                    <a class="menu__item" href="#">services</a>
+                    <a class="menu__item" href="#">about</a>
+                    <a class="menu__item" href="#">blog</a>
+                    <a class="menu__item" href="#">contact us<a/>
               </nav>
         </header>
-        <section>
-              <main>
-                    <h1 class="title">Building an App Without Design Expertise?</h1>
-                    <p>I help tech startups design better digital products without hiring a full-ti me designer</p>
-                    <button>Schedule free consultation</button>
+        <section class="main-section">
+              <main class="main-content">
+                    <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
+                    <p class="main-content__subtitle">I help tech startups design better digital products without hiring a full-ti me designer</p>
+                    <button class="main-content__button" tupe="button" name="button">Schedule free consultation</button>
               </main>
-              <div>
-                    <img>>
-              </div>
+              <div class="image-content">
+                    <img class="image-content__image" src="" atl="">
+               </div>
         </section>
   </body>
 
 <html>
-
