--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html Lang="ru">
   <head>
     <meta charset="utf-8"/>
@@ -22,7 +23,7 @@
               <main class="main-content">
                     <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
                     <p class="main-content__subtitle">I help tech startups design better digital products without hiring a full-ti me designer</p>
-                    <button class="main-content__button" tupe="button" name="button">Schedule free consultation</button>
+                    <button class="main-content__button" type="button" name="button">Schedule free consultation</button>
               </main>
               <div class="image-content">
                     <img class="image-content__image" src="" atl="">
