--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-       <html Lang="ru">
+<!DOCTYPE html>    
+<html Lang="ru">
   <head>
     <meta charset="utf-8"/>
     <title>Мой первый сайт</title>
@@ -7,7 +8,8 @@
   </head>
 
 
-  <body>
+  <body
+        <div class="wrapper">
         <header class="header">
               <div class="logo">app.creation</div>
               <nav class="menu">
