--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>    
+<!DOCTYPE html>
 <html Lang="ru">
   <head>
     <meta charset="utf-8"/>
@@ -9,10 +9,14 @@
   </head>
 
 
-  <body
+  <body>
         <div class="wrapper">
         <header class="header">
-              <div class="logo">app.creation</div>
+              <div class="logo">
+                <div class="logo__circle logo__circle_color_dark-blue"></div>
+                <div class="logo__circle logo__circle_color_blue"></div>
+                app.creation
+              </div>
               <nav class="menu">
                     <a class="menu__item" href="#">start</a>
                     <a class="menu__item" href="#">services</a>
@@ -25,7 +29,7 @@
               <main class="main-content">
                     <h1 class="main-content__title">Building an App Without Design Expertise?</h1>
                     <p class="main-content__subtitle">I help tech startups design better digital products without hiring a full-ti me designer</p>
-                    <button class="main-content__button" tupe="button" name="button">Schedule free consultation</button>
+                    <button class="main-content__button" type="button" name="button">Schedule free consultation</button>
               </main>
               <div class="image-content">
                     <img class="image-content__image" src="" atl="">
